[package]
name = "portdog"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
rlimit = "0.10.2"
webpki-roots = "1.0.0"

tokio-rustls = { version = "0.26.2", features = ["ring"] }
regex = "1.11.1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.11"
colored = "3.0.0"